--- a/style.css
+++ b/style.css
@@ -6,3 +6,67 @@
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
+
+body{
+    background: #007bff;
+}
+
+.start_btn,
+.info_box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+
+/* Start quiz button styling  */
+
+.start_btn button{
+    font-size: 25px;
+    font-weight: 500;
+    color: #007bff;
+    background: black;
+    padding: 15px 30px;
+    outline: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.info_box{
+    width: 540px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+.info_box .info_title{
+    height: 60px;
+    width: 100%;
+    border-bottom: 1px solid lightgrey;
+    display: flex;
+    align-items: center;
+    padding: 0 35px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.info_box .info_list{
+    padding: 15px 35px;
+}
+
+.info_box .info_list .info{
+     margin: 5px 0px;
+     font-size: 17px;
+}
+
+.info_box .info_list .info span{
+    font-weight: 600;
+    color: #007bff;
+}
+
+.info_box .button{
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
