--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/* remember to import font  */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *{
     margin: 0;
@@ -12,7 +13,8 @@ body{
 }
 
 .start_btn,
-.info_box{
+.info_box,
+.quiz_box{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -24,7 +26,7 @@ body{
 
 .start_btn button{
     font-size: 25px;
-    font-weight: 500;
+    font-weight: 600;
     color: #007bff;
     background: black;
     padding: 15px 30px;
@@ -34,6 +36,7 @@ body{
 }
 
 .info_box{
+    display: none;
     width: 540px;
     background: #fff;
     border-radius: 5px;
@@ -55,7 +58,7 @@ body{
 }
 
 .info_box .info_list .info{
-     margin: 5px 0px;
+     margin: 5px 0;
      font-size: 17px;
 }
 
@@ -64,9 +67,194 @@ body{
     color: #007bff;
 }
 
-.info_box .button{
+.info_box .buttons{
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    padding: 0 35px;
+    border-top: 1px solid lightgrey;
+}
+
+.info_box .buttons button{
+    margin: 0 5px;
+    height: 40px;
+    width: 100px;
+    border: 2px solid transparent;
+    background-color: black;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.buttons button.restart{
+    color: black;
+   border-color: #007bff;
+   background: #007bff;
+}
+
+.buttons button.restart:hover{
+    background: #0263ca;
+    color: white;
+}
+
+.buttons button.quit{
+    color: #007bff;
+   border-color: #007bff;
+}
+
+.buttons button.quit:hover{
+    background: #0263ca;
+    color: white;
+}
+
+.quiz_box{
+    width: 550px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+.quiz_box header{
+    position: relative;
+    z-index: 99;
+    height: 70px;
+    padding: 0 30px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px 5px 0 0;
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
+.quiz_box header .title{
+    font-size: 20px;
+    font-weight: 600;
+    color: #007bff;
+}
+
+.quiz_box header .timer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 145px;
+    height: 45px;
+    background: #cce5ff;
+    border: 2px solid #b8daff;
+    border-radius: 5px;
+    padding: 0 8px;
+}
+
+.quiz_box header .timer .time_text{
+    font-weight: 400;
+    font-size: 17px;
+    user-select: none;
+}
+
+.quiz_box header .timer .timer_sec{
+    font-size: 18px;
+    font-weight: 500;
+    background: #343a40;
+    height: 30px;
+    width: 45px;
+    color: #fff;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 5px;
+    border: 1px solid black;
+    user-select: none;
+}
+
+.quiz_box section{
+    padding: 25px 30px 20px 30px;
+    background: #0263ca;
+}
+
+.quiz_box section .que_text{
+    font-size: 25px;
+    font-weight: 600;
+
+}
+
+.quiz_box section .option_list{
+    padding: 20px 0;
+    display: block;
+}
+
+.quiz_box section .option_list .option{
+    background: aliceblue;
+    border: 1px solid #84c5fe;
+    border-radius: 5px;
+    padding: 10px 15px;
+    margin-bottom: 15px;
+    font-size: 19px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+}
+
+.quiz_box section .option_list .option:hover{
+    color: #004085;
+    background-color: #cce5ff;
+    border-color: #b8daff;
+}
+
+.quiz_box section .option_list .option:last-child{
+    margin-bottom: 0px;
+}
+
+
+.quiz_box section .option_list .option .icon{
+    height: 26px;
+    width: 26px;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 17px;
+    line-height: 24px;
+    pointer-events: none;
+}
+
+
+.quiz_box section .option_list .option .icon.tick{
+    border-color: #23903c;
+    color: #23903c;
+    background: #d4edda;
+}
+
+
+.quiz_box section .option_list .option .icon.cross{
+    border-color: #a42834;
+    color: #f8d7da;
+    border-color: #a42834;
+}
+
+.quiz_box footer{
+    height: 60px;
+    width: 100%;
+    padding: 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.quiz_box footer .total_que{
+    display: flex;
+    user-select: none;
+}
+
+.quiz_box footer .total_que span{
+    display: flex;
+    user-select: none;
+}
+
+.quiz_box footer .total_que span p{
+    font-weight: 500;
+    padding: 0 5px;
 }
