--- a/style.css
+++ b/style.css
@@ -14,12 +14,24 @@ body{
 
 .start_btn,
 .info_box,
-.quiz_box{
+.quiz_box,
+.result_box{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+    box-shadow: 1px 1px 8px 2px rgba(0, 0, 0, 0.3),
+                1px 1px 20px 2px rgba(0, 0, 0, 0.19);
+    transition: all 0.3s ease; 
+}
+
+.info_box.activeInfo,
+.quiz_box.activeQuiz{
+    z-index: 5;
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(0.9);
+    transition-delay: 0.01s;
 }
 
 /* Start quiz button styling  */
@@ -32,14 +44,18 @@ body{
     padding: 15px 30px;
     outline: none;
     border-radius: 5px;
+    border: none;
     cursor: pointer;
 }
 
+
 .info_box{
-    display: none;
     width: 540px;
     background: #fff;
     border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
 
 .info_box .info_title{
@@ -80,6 +96,7 @@ body{
     margin: 0 5px;
     height: 40px;
     width: 100px;
+    outline: none;
     border: 2px solid transparent;
     background-color: black;
     border-radius: 5px;
@@ -97,24 +114,31 @@ body{
 }
 
 .buttons button.restart:hover{
-    background: #0263ca;
+    background: black;
     color: white;
 }
 
 .buttons button.quit{
     color: #007bff;
-   border-color: #007bff;
+    background: #fff;
 }
 
 .buttons button.quit:hover{
-    background: #0263ca;
-    color: white;
+    background: black;
+    color: #fff;
 }
+
+
+/* Quiz box styling started here */
+
 
 .quiz_box{
     width: 550px;
     background: #fff;
     border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
 
 .quiz_box header{
@@ -258,3 +282,85 @@ body{
     font-weight: 500;
     padding: 0 5px;
 }
+
+.quiz_box footer .total_que span p:first-child{
+    padding-left: 0px;
+}
+
+.quiz_box footer .next_btn{
+    height: 40px;
+    padding: 0 13px;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+    outline: none;
+    color: #0263ca;
+    background: white;
+    border-radius: 5px;
+    border: 1.4px solid #021b36;
+    cursor: pointer;
+}
+
+.quiz_box footer .next_btn:hover{
+    background: black;
+}
+
+/* result box styling  */
+
+.result_box{
+    background: #fff;
+    width: 450px;
+    padding: 25px 30px;
+    border-radius: 5px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
+}
+
+.result_box .icon{
+    font-size: 120px;
+    color: #0263ca;
+    margin-bottom: 10px;
+}
+
+.result_box .complete_text{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.result_box .score_text span{
+    display: flex;
+    margin: 10px 0;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.score_text span p{
+    font-weight: 600;
+    padding: 0 4px;
+}
+
+.result_box .buttons{
+    display: flex;
+    margin: 20px 0;
+}
+
+.result_box .buttons button{
+    margin: 0 10px;
+    height: 45px;
+    padding: 0 20px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    border: 1px solid #007bff;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
